template.yaml
AWSTemplateFormatVersion: '2010-09-09'

Parameters:
  ImageId:
    Type: AWS::EC2::Image::Id
    Default: ami-0cc75a8978fbbc969
  InstanceType:
    Type: String
    Default: t2.small
  SnapshotId:
    Type: String
  DockerComposeVersion:
    Type: String
    Default: 1.26.2
  CertificateArn:
    Type: String
  AllowCidrIp:
    Type: String
    Default: 0.0.0.0/0

Resources:
  # ----------------------------------------------------------------------------
  # Networking
  # ----------------------------------------------------------------------------
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.39.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
  InternetGateway:
    Type: AWS::EC2::InternetGateway
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref Vpc
      InternetGatewayId: !Ref InternetGateway
  Subnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: 10.39.0.0/24
      AvailabilityZone: !Select
      - 0
      - Fn::GetAZs: !Ref AWS::Region
  Subnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: 10.39.1.0/24
      AvailabilityZone: !Select
      - 1
      - Fn::GetAZs: !Ref AWS::Region
  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
  Route:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  SubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref Subnet1
  SubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref Subnet2

  # ----------------------------------------------------------------------------
  # Compute
  # ----------------------------------------------------------------------------
  LaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        UserData:
          Fn::Base64: !Sub
          - |
            #!/bin/bash
            echo ${DOCKER_COMPOSE_VERSION} > 1
            echo ${AWS_REGION} > 2
            echo ${NAME} > 3
            AWS_INSTANCE_ID=$(curl -s http://169.254.169.254/latest/meta-data/instance-id)
            echo $AWS_INSTANCE_ID > 4
            ROOT_VOLUME_IDS=$(aws ec2 describe-instances --region ${AWS_REGION} --instance-id $AWS_INSTANCE_ID --output text --query Reservations[0].Instances[0].BlockDeviceMappings[0].Ebs.VolumeId)
            echo $ROOT_VOLUME_IDS > 5
            aws ec2 create-tags --resources $ROOT_VOLUME_IDS --region ${AWS_REGION} --tags Key=Name,Value=${NAME}
            yum -y update
            yum -y install docker git
            systemctl enable docker
            systemctl start docker
            sudo curl -L "https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m`" -o /usr/local/bin/docker-compose
            chmod +x /usr/local/bin/docker-compose
            mkdir /crm
            mount /dev/xvdf /crm
            echo "$(sudo xfs_admin -u /dev/xvdf | tr -d ' ')     /crm        xfs    defaults          0   0" >> /etc/fstab
            git clone https://github.com/nemodija/crm-compose.git
            cd crm-compose/
            chown -R 33:33 www/ot_src/crm/work/
            docker-compose up -d
          - {
              DOCKER_COMPOSE_VERSION: !Ref DockerComposeVersion,
              AWS_REGION: !Ref AWS::Region,
              NAME: !Ref AWS::StackName
            }
  Instance: 
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: !GetAtt Subnet1.AvailabilityZone
      ImageId: !Ref ImageId
      InstanceType: !Ref InstanceType
      KeyName: wiki
      Tags:
      - Key: Name
        Value: !Ref AWS::StackName
      LaunchTemplate:
        LaunchTemplateId: !Ref LaunchTemplate
        Version: !GetAtt LaunchTemplate.LatestVersionNumber
      IamInstanceProfile: !Ref IamInstanceProfile
      NetworkInterfaces:
      - AssociatePublicIpAddress: true
        DeviceIndex: 0
        SubnetId: !Ref Subnet1
        GroupSet:
        - !Ref SecurityGroup
  # ----------------------------------------------------------------------------
  # Identity and Access Management
  # ----------------------------------------------------------------------------
  IamInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
      - !Ref InstanceRole
  InstanceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
        - Effect: Allow
          Principal:
            Service: ec2.amazonaws.com
          Action: sts:AssumeRole    
      Description: Allows EC2 instances to call AWS services on your behalf.
      ManagedPolicyArns:
      - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM
      Policies:
      - PolicyName: CreateInstanceTagPolicy
        PolicyDocument:
          Version: 2012-10-17
          Statement:
          - Effect: Allow
            Action:
            - 'ec2:Describe*'
            - 'ec2:CreateTags'
            Resource: '*'
  LifecyclePolicyRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
        - Effect: Allow
          Principal:
            Service: dlm.amazonaws.com
          Action: sts:AssumeRole
      ManagedPolicyArns:
      - arn:aws:iam::aws:policy/service-role/AWSDataLifecycleManagerServiceRole
  # ----------------------------------------------------------------------------
  # Elastic Block Store
  # ----------------------------------------------------------------------------
  Volume:
    Type: AWS::EC2::Volume
    Properties:
      AvailabilityZone: !GetAtt Instance.AvailabilityZone
      SnapshotId: !Ref SnapshotId
      Tags:
      - Key: Name
        Value: !Ref AWS::StackName
  VolumeAttachment:
    Type: AWS::EC2::VolumeAttachment
    Properties:
      Device: /dev/sdf
      InstanceId: !Ref Instance
      VolumeId: !Ref Volume
  LifecyclePolicy:
    Type: AWS::DLM::LifecyclePolicy
    Properties:
      Description: !Sub ${AWS::StackName}
      ExecutionRoleArn: !GetAtt LifecyclePolicyRole.Arn
      PolicyDetails:
        ResourceTypes:
        - VOLUME
        Schedules:
        - Name: !Sub "${AWS::StackName}-daily-snapshot-schedule"
          CreateRule:
            Interval: 24
            IntervalUnit: HOURS
            Times:
            - "15:00"
          RetainRule:
            Count: 3
        TargetTags:
        - Key: Name
          Value: !Ref AWS::StackName
      State: ENABLED
  # ----------------------------------------------------------------------------
  # Network & Security
  # ----------------------------------------------------------------------------
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref Vpc
      GroupDescription: crm
      SecurityGroupIngress:
      - SourceSecurityGroupId: !Ref LBSecurityGroup
        FromPort: 80
        ToPort: 80
        IpProtocol: tcp
  LBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref Vpc
      GroupDescription: crm-lb
      SecurityGroupIngress:
      - CidrIp: !Ref AllowCidrIp
        FromPort: 80
        ToPort: 80
        IpProtocol: tcp
      - CidrIp: !Ref AllowCidrIp
        FromPort: 443
        ToPort: 443
        IpProtocol: tcp
  # ----------------------------------------------------------------------------
  # Load Balancing
  # ----------------------------------------------------------------------------
  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckPath: /healthcheck.html
      Port: 80
      Protocol: HTTP
      Targets:
      - Id: !Ref Instance
        Port: 80
      TargetType: instance
      VpcId: !Ref Vpc
  LoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      SecurityGroups:
      - !Ref LBSecurityGroup
      Subnets:
      - !Ref Subnet1
      - !Ref Subnet2
  ListenerHttp:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref LoadBalancer
      DefaultActions:
      - Type: redirect
        RedirectConfig:
          Protocol: HTTPS
          Port: 443
          StatusCode: HTTP_301
      Port: 80
      Protocol: HTTP
  ListenerHttps:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref LoadBalancer
      DefaultActions:
      - Type: forward
        TargetGroupArn: !Ref TargetGroup
      Port: 443
      Protocol: HTTPS
      Certificates:
      - CertificateArn: !Ref CertificateArn

Outputs:
  ManagedInstanceUrl:
    Value: !Sub https://${AWS::Region}.console.aws.amazon.com/systems-manager/session-manager/${Instance}?region=${AWS::Region}
